# circuit_lm

./: .gitignore  DATA_COLLECTION.md  HYBRID_BLOG.md  NEXT_LEVEL.md  NEXT_LEVEL_IMPLEMENTATION.md  PROGRESS_TRACKER.md  README.md  STATUS.md  STATUS_REPORT.md  big_corrector.pt  big_output.txt  build_personal_dataset.py  chat_data.txt  chat_data_500k.txt  chat_data_full.txt  conftest.py  corrector.pt  corrector_bpe_chat.pt  corrector_chat.pt  corrector_large.pt  corrector_pda.pt  corrector_test.pt  do_extract.py  extract_marble_conversations.py  fast_training_notebook.ipynb  fix_entity.py  generation_output.txt  hybrid_bpe.pt  hybrid_large.pt  hybrid_test.pt  kaggle.yml  kaggle_run.ipynb  kaggle_training_notebook.ipynb  large_corrector.pt  large_test.txt  marble_conversations.txt  marble_data.txt  merge_training_data.py  notebook.ipynb  nova_data.txt  (+7 more)
bpe_tokenizer/: Cargo.toml
chat_export/: file_00000000e13c71f7a9c3ceb5c26cda58-ARCHITECTURE.md
circuit_lm/: __init__.py  __main__.py  cache.py  chat.py  circuits.py  cli.py  data.py  eval.py  hierarchical.py  infer.py  io.py  metrics.py  pda.py  ppm.py  symbolic.py  tokenizer.py  trace.py  train_cpsat.py  train_greedy.py  train_joint_cpsat.py  train_joint_pda_cpsat.py  train_pda_cpsat.py  train_ppm.py
demo/: .gitignore  app.py  package.json  server.js
docs/: DUAL_CHANNEL_CIRCUIT_LM.md  (+11 more)
huoe/: README.md  pyproject.toml
huoe/huoe/: __init__.py  controller.py  experts.py  macro_block.py  model.py  router.py  sparse_linear.py  train.py
huoe/huoe/scripts/: __init__.py  data_utils.py  run_benchmark.py  train_minimal.py
(+77 files in other folders)
