[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "huoe"
version = "0.1.0"
description = "Hierarchical Union-of-Experts: stateful, sparse MoE transformer."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.20",
    "torch>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["huoe*"]
